# cmake-project-layout

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.docs/: readme.md
artifacts/: readme.md
assets/: readme.md
cmake/: readme.md
config/: readme.md
inc/: readme.md
lib/: CMakeLists.txt  readme.md
lib/local-lib-2/: CMakeLists.txt
src/: readme.md
tests/: readme.md
tools/: readme.md
